tests/neg/i19809.scala
type A = Any {
  var x : Int
  def x_=(x: Int): Unit // error
}
